Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/hr/hr_report_staff_over_time.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_over_time.xhtml
@@ -125,8 +125,8 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Rate Per Minute"  />
                                     </f:facet>
-                                    <p:outputLabel value="#{ss.overTimeRatePerMinute*1.5}">
-                                        <f:convertNumber pattern="0.00" />
+                                    <p:outputLabel value="#{ss.rpmWithMutiplingFactor1_5}">
+                                        
                                     </p:outputLabel>
                                     <f:facet name="footer">
                                         <h:outputLabel style="text-align: right;" value="#{hrReportController.totalRatePerMinut}">
@@ -162,7 +162,18 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Normal OT Value(C)"  />
                                     </f:facet>
-                                    <p:outputLabel value="#{ss.overTimeRatePerMinute*1.5*ss.extraDutyNormalMinute}">
+                                    <p:outputLabel value="#{ss.rpmWithMutiplingFactor1_5*ss.extraDutyNormalMinute}">
+                                        <f:convertNumber pattern="0.00" />
+                                    </p:outputLabel>
+                                    <f:facet name="footer">
+                                    </f:facet>
+                                </p:column>
+                                
+                                <p:column  style="text-align: right;" rendered="#{webUserController.hasPrivilege('Developers')}">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Normal OT Value(C) diff"  />
+                                    </f:facet>
+                                    <p:outputLabel value="#{(ss.rpmWithMutiplingFactor1_5*ss.extraDutyNormalMinute)-ss.extraDutyNormalValue}">
                                         <f:convertNumber pattern="0.00" />
                                     </p:outputLabel>
                                     <f:facet name="footer">
@@ -203,7 +214,7 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="RPM OT(1.5)"  />
                                     </f:facet>
-                                    <p:outputLabel value="#{ss.overTimeRatePerMinute*1.5}">
+                                    <p:outputLabel value="#{ss.rpmWithMutiplingFactor1_5}">
                                         <f:convertNumber pattern="0.00" />
                                     </p:outputLabel>
                                     <f:facet name="footer">
@@ -244,7 +255,7 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="RPM(2.5)"  />
                                     </f:facet>
-                                    <p:outputLabel value="#{ss.overTimeRatePerMinute*2.5}">
+                                    <p:outputLabel value="#{ss.rpmWithMutiplingFactor2_5}">
                                         <f:convertNumber pattern="0.00" />
                                     </p:outputLabel>
                                     <f:facet name="footer">
