Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/channel/channel_payment_report.xhtml
+++ b/src/main/webapp/channel/channel_payment_report.xhtml
@@ -94,7 +94,7 @@
                                 </p:column>
 
                                 <p:column style="text-align: center;">
-                                    <p:outputLabel value="#{sub.paymentMethod}"/>
+                                    <p:outputLabel value="#{sub.paidBill.paymentMethod}" />
                                 </p:column>
 
                                 <p:columnGroup type="footer">
