--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -30,8 +30,8 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Session" action="/channel/channel_report_bill_session_1"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Fees" action="/channel/channel_report_by_fee"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Fees with Fee Types" action="/channel/report_cashier_summery_with_fee-type"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Summary" action="/channel/channel_report_all_booking"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Detail Summary" action="/channel/channel_report_by_bill_class"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Summary()" action="/channel/channel_report_all_booking"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Detail Summary()" action="/channel/channel_report_by_bill_class"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  All Department Bill Summary" action="/channel/channel_report_department_wise_bills"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  All Channel Bills" action="/channel/channel_report_all_bills"/>
                                     </h:panelGrid>
@@ -40,12 +40,10 @@
                             <h:panelGrid columns="1">
                                 <p:panel header="Cashier Reports" style="width: 400px;margin: auto;"  toggleable="true">  
                                     <h:panelGrid columns="1">
-                                        <!--                            <p:commandButton styleClass="linkButton" ajax="false" value="  Cashier Detail Summary" action="/channel/channel_report_cashier_all_summery"/>
-                                                                    <p:commandButton styleClass="linkButton" ajax="false" value="  Cashier Summary" action="/channel/channel_report_cashier_summery"/>-->
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Bills by Single Cashier" action="/channel/report_cashier_detailed_by_user"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Single Cashier Summary" action="/channel/report_cashier_summery_by_user"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Bills by All Cashiers" action="/channel/report_cashier_summery_all"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="All Cashier Summary" action="/channel/report_cashier_summery_all_total_only"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Cashier Report" action="/reportCashier/report_cashier_detailed_by_user.xhtml" actionListener="#{commonReport.recreteModal}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Cashier Summary" action="/reportCashier/report_cashier_summery_by_user" actionListener="#{commonReport.recreteModal}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="All Cashier Report" action="/reportCashier/report_cashier_summery_all.xhtml" actionListener="#{cashierReportController.recreteModal}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="All Cashier Summary " action="/reportCashier/report_cashier_summery_all_total_only.xhtml" actionListener="#{cashierReportController.recreteModal}"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
