--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -55,7 +55,8 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Balance(32)" action="/channel/channel_report_agent_balance"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Deposit(36)" action="/channel/channel_report_agent_payment_bill"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Wise Channel Appoinment Total And Count(29 &amp; 30)" action="/channel/channel_report_agent_wise_channel_total"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Channel Books Report()"  action="/channel/channel_report_agent_referece_book" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Agent Channel Books Report()"  action="/channel/channel_report_agent_referece_book" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Agent Details()" action="/channel/channel_report_agent_details"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
