inward admission-->patient search with nic,phone,home numbers #344 Direct link to doctor payment interface in to channel booking  interface with selected Specialty and selected consultant. #345 Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -906,7 +906,7 @@
                                              process="txtBsSearch calFrom calTo btnBsSearch" 
                                              update="bSessionSearch">
 
-                                
+
                             </p:commandButton>
 
                             <p:dataTable id="bSessionSearch" value="#{channelSearchController.searchedBillSessions}" var='bs'
@@ -1056,6 +1056,14 @@
                                 </p:panel>
                             </h:panelGrid>
 
+                        </p:tab>
+                        <p:tab title="Doctor Payment">
+                            <p:panel header="Selected Session">
+                                <h:panelGrid columns="1">
+                                    <p:commandButton value="Pay Selected Doctor" action="#{bookingController.paySelectedDoctor}" 
+                                                     ajax="false" onclick="onSubmitButton();" />                                        
+                                </h:panelGrid>
+                            </p:panel>
                         </p:tab>
                     </p:tabView>
                 </p:panel>
