--- a/src/main/webapp/channel/channel_payment_staff_bill.xhtml
+++ b/src/main/webapp/channel/channel_payment_staff_bill.xhtml
@@ -136,7 +136,7 @@
 
                                     <h:outputLabel value="Payment Method" ></h:outputLabel>
                                     <p:selectOneMenu  id="cmbPay" style="width: 400px;" value="#{channelStaffPaymentBillController.paymentMethod}" >
-                                        <f:selectItem itemLabel="Please select a Payment method" />
+                                        <!--<f:selectItem itemLabel="Please select a Payment method" />-->
                                         <f:selectItems value="#{enumController.paymentMethodsWithoutCredit}"/>
                                     </p:selectOneMenu>
 
