--- a/src/main/webapp/bill_all_view.xhtml
+++ b/src/main/webapp/bill_all_view.xhtml
@@ -130,7 +130,8 @@
                                         <p:autoComplete id="dep" completeMethod="#{departmentController.completeDept}" 
                                                         var="dept" itemLabel="#{dept.name}" itemValue="#{dept}" forceSelection="true" 
                                                         value="#{billSearch.billSearch.department}" converter="departmentConverter"/>
-
+                                        <h:outputLabel value="Staff :" ></h:outputLabel>
+                                        <h:outputLabel value="#{billSearch.billSearch.staff.person.name}" ></h:outputLabel>
                                         <h:outputLabel value="From Institution :" ></h:outputLabel>
                                         <p:autoComplete forceSelection="true" value="#{billSearch.billSearch.fromInstitution}"
                                                         completeMethod="#{institutionController.completeIns}"
@@ -158,7 +159,8 @@
                                         <p:autoComplete id="todep" completeMethod="#{departmentController.completeDept}" 
                                                         var="dept" itemLabel="#{dept.name}" itemValue="#{dept}" forceSelection="true" 
                                                         value="#{billSearch.billSearch.toDepartment}" converter="departmentConverter"/>
-
+                                        <h:outputLabel value="To Staff :" ></h:outputLabel>
+                                        <h:outputLabel value="#{billSearch.billSearch.toStaff.person.name}" ></h:outputLabel>
                                         <h:outputLabel value="From Institution :" ></h:outputLabel>
                                         <p:autoComplete forceSelection="true" value="#{billSearch.billSearch.fromInstitution}"
                                                         completeMethod="#{institutionController.completeIns}"
@@ -175,7 +177,8 @@
                                         <p:autoComplete id="frmdep" completeMethod="#{departmentController.completeDept}" 
                                                         var="dept" itemLabel="#{dept.name}" itemValue="#{dept}" forceSelection="true" 
                                                         value="#{billSearch.billSearch.fromDepartment}" converter="departmentConverter"/>
-
+                                        <h:outputLabel value="From Staff :" ></h:outputLabel>
+                                        <h:outputLabel value="#{billSearch.billSearch.fromStaff.person.name}" ></h:outputLabel>
                                         <h:outputLabel value="Company Name : " />  
                                         <p:autoComplete id="acCreditCompany" forceSelection="true" style="text-align: right;"
                                                         value="#{billSearch.creditCompany}"  
