--- a/src/main/webapp/channel/channel_report_consultant_month_count.xhtml
+++ b/src/main/webapp/channel/channel_report_consultant_month_count.xhtml
@@ -12,9 +12,9 @@
 
         <h:form>
 
-            <p:panel header="Statement Of Agent Account Total And Count">
+            <p:panel>
                 <f:facet name="header">
-                    <p:outputLabel value="Agent Wise Appoinment Totals And Count" />
+                    <p:outputLabel value="Consultant Wise Appoinment Totals And Count" />
                     <p:commandButton id="btnBack" value="Back" 
                                      action="/channel/channel_reports" style="float: right;"
                                      ajax="false">
@@ -29,8 +29,7 @@
                         <h:outputLabel value="To Date"/>
                         <p:calendar value="#{channelReportTempController.toDate}" navigator="true" pattern="dd MMM yyyy" >
                         </p:calendar>
-
-                    </h:panelGrid> 
+                    </h:panelGrid>
                     <h:panelGrid columns="2" id="pg1" >
                         <h:outputLabel value="Count"/> 
                         <p:selectBooleanCheckbox value="#{channelReportTempController.count}" >
@@ -38,33 +37,31 @@
                         </p:selectBooleanCheckbox>
                         <h:outputLabel value="By Date"/> 
                         <p:selectBooleanCheckbox value="#{channelReportTempController.byDate}" />
-                        <h:outputLabel value="Only Billed Agencies"/> 
-                        <p:selectBooleanCheckbox value="#{channelReportTempController.billedAgencys}" />
                         <h:outputLabel value="Without Doc Fee" rendered="#{!channelReportTempController.count}"/> 
                         <p:selectBooleanCheckbox value="#{channelReportTempController.withOutDocPayment}" rendered="#{!channelReportTempController.count}" />
                     </h:panelGrid> 
                     <h:panelGrid columns="3">
                         <h:panelGroup id="pan1">
                             <h:panelGrid columns="2" rendered="#{channelReportTempController.count}" >
-                                <p:commandButton action="#{channelReportTempController.createAgentWiseAppoinmentCount()}" value="Count" ajax="false" />
+                                <p:commandButton action="#{channelReportTempController.createStaffWiseAppoinmentCount}" value="Count" ajax="false" />
                             </h:panelGrid>
                         </h:panelGroup>
                         <h:panelGroup id="pan2">
                             <h:panelGrid columns="2" rendered="#{!channelReportTempController.count}" >
-                                <p:commandButton action="#{channelReportTempController.createAgentWiseAppoinmentTotal()}" value="Totals" ajax="false" />
+                                <p:commandButton action="#{channelReportTempController.createStaffWiseAppoinmentTotal}" value="Totals" ajax="false" />
                             </h:panelGrid>
                         </h:panelGroup>
                         <p:commandButton ajax="false" value="Print" styleClass="noPrintButton">
                             <p:printer target="reportPrint"  />
-                        </p:commandButton>
-                    </h:panelGrid> 
+                        </p:commandButton> 
+                    </h:panelGrid>
                 </p:panel>
                 <p:panel id="reportPrint" styleClass="noBorder summeryBorder">
                     <p:dataTable value="#{channelReportTempController.channelSummeryDateRangeBillTotalTables}" var="s" id="tbl1" >
                         <f:facet name="header">
                             <p:outputLabel value="#{sessionController.loggedUser.institution.name}" />
                             <br></br>
-                            <p:outputLabel value="Agent Wise Appoinment " />
+                            <p:outputLabel value="Consultant Wise Appoinment " />
                             <h:panelGroup id="pan3">
                                 <p:outputLabel value="(Totals)" rendered="#{!channelReportTempController.count}" />
                                 <p:outputLabel value="(Count)" rendered="#{channelReportTempController.count}" />
@@ -90,7 +87,7 @@
                         </p:columnGroup>
                         <p:subTable value="#{s.channelSummeryDateRangeBillTotalRows}" var="a" >
                             <f:facet name="header">
-                                <p:outputLabel value="#{s.agency.name} - (#{s.agency.institutionCode})" >
+                                <p:outputLabel value="#{s.staff.person.name}" >
                                 </p:outputLabel>
                             </f:facet>
                             <p:column>
